Ping Pong Action doesn't work correct. #39614

Closed
opened 2014-04-06 13:44:13 +02:00 by Doc Holiday · 13 comments

System Information
Win7 64 / Radeon HD 6900

Blender Version
Broken: 2.7 19e627c
Worked: (optional)

Short description of error

After a couple of Ping-Pong Cycles, the next Cycle begins reverse. In my Test after 5 Cycles, it makes the Jump. But this does not happen always.

Exact steps for others to reproduce the error
Based on a (as simple as possible) attached .blend file with minimum amount of steps

Make a simple Keyframe Action, and let it Play as Ping-Pong Action.

(Possibility to attach a .blend would be nice.)

**System Information** Win7 64 / Radeon HD 6900 **Blender Version** Broken: 2.7 19e627c Worked: (optional) **Short description of error** After a couple of Ping-Pong Cycles, the next Cycle begins reverse. In my Test after 5 Cycles, it makes the Jump. But this does not happen always. **Exact steps for others to reproduce the error** Based on a (as simple as possible) attached .blend file with minimum amount of steps Make a simple Keyframe Action, and let it Play as Ping-Pong Action. (Possibility to attach a .blend would be nice.)
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @doc_holiday

Added subscriber: @doc_holiday
Member

Added subscriber: @JorgeBernalMartinez

Added subscriber: @JorgeBernalMartinez
Member

I can confirm the bug.

system:
windows 7 64bits. Blender 2.70

I can confirm the bug. system: windows 7 64bits. Blender 2.70

Added subscriber: @Moguri

Added subscriber: @Moguri

You should be able to attach a file with the "Upload File" action.

You should be able to attach a file with the "Upload File" action.
Member

This patch fixes the bug but the code from BGE actions is very confuse.
For example, although we are in Ping pong mode we never enter into the switch case ACT_MODE_PING_PONG in BL_Action::Update function as it is processed in BL_ActionActuator::Update.

This patch fixes the bug but the code from BGE actions is very confuse. For example, although we are in Ping pong mode we never enter into the switch case ACT_MODE_PING_PONG in BL_Action::Update function as it is processed in BL_ActionActuator::Update.
Member

To comment that this bug seems a duplicate of this other bug #29820

To comment that this bug seems a duplicate of this other bug #29820

Added subscriber: @mahalin

Added subscriber: @mahalin

This issue was referenced by blender/blender-addons-contrib@3448822b2f

This issue was referenced by blender/blender-addons-contrib@3448822b2ffc2a560c6902470d5a572dfa344e1d

This issue was referenced by 3448822b2f

This issue was referenced by 3448822b2ffc2a560c6902470d5a572dfa344e1d

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 3448822b2f.

Closed by commit 3448822b2f.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#39614
No description provided.