Fix T39614: Ping Pong Action doesn't work correctly